fix menu z-index

--- a/src/app/menu/menu.component.less
+++ b/src/app/menu/menu.component.less
@@ -5,6 +5,7 @@
     height: -webkit-fill-available;
     background-color: #252526;
     width: 200px;
+    z-index:100;
     div{
         color:white;
     }
